fix overflow in modal when text is too long

--- a/front-end/src/style.css
+++ b/front-end/src/style.css
@@ -108,6 +108,7 @@ main {
     padding: 0.5rem;
     width: fit-content;
     border-radius: 1rem;
+    cursor: pointer;
 }
 
 .close:hover {
