--- a/front-end/src/ui/modal/modal.css
+++ b/front-end/src/ui/modal/modal.css
@@ -15,8 +15,8 @@
 
 .modal-window {
     background: #000000;
-    padding: 20px;
     border-radius: 12px;
+    padding: 0.5rem;
     width: 95%;
     max-width: 500px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
@@ -31,6 +31,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.modal-user-content{
+    overflow-wrap: break-word;
+    max-height: 120px; /* hauteur limite */
+    overflow-y: auto; /* scroll si trop long */
 }
 
 .modal-bottom {
@@ -66,10 +72,13 @@
     padding: 12px 0;
     outline: none;
     line-height: 1.4;
-    
-    min-height: 50px;      /* hauteur de base */
-    max-height: 150px;     /* limite max comme Twitter */
-    overflow-y: auto;      /* scroll interne si trop de texte */
+
+    min-height: 50px;
+    /* hauteur de base */
+    max-height: 150px;
+    /* limite max comme Twitter */
+    overflow-y: auto;
+    /* scroll interne si trop de texte */
 }
 
 
@@ -79,3 +88,26 @@
     font-size: 1.3rem;
 }
 
+.modal-content {
+    margin-left: 0.7rem;
+}
+
+.modal-go-to-profil {
+    color: rgb(29, 155, 240);
+}
+
+
+.modal-file-input {
+    padding: 0.5rem;
+    cursor: pointer;
+    border-radius: 1rem;
+}
+
+.modal-file-input:hover i {
+    color: rgb(29, 155, 240);
+}
+
+.modal-file-input:hover {
+    background-color: rgb(29, 155, 240, 0.2);
+
+}
